appId: com.layerzwallet.mobile
---
# Dynamic network switch test that uses the NETWORK environment variable
- tapOn:
    id: 'NetworkSwitcherTrigger'
- waitForAnimationToEnd
- waitForAnimationToEnd

- repeat:
    while:
      notVisible:
        id: ${'selectedNetwork-' + NETWORK}
    commands:
      - swipe:
          start: 50%,80%
          end: 50%,65%

- tapOn:
    id: ${'network-' + NETWORK}
- waitForAnimationToEnd
- waitForAnimationToEnd
- assertVisible:
    id: ${'selectedNetwork-' + NETWORK}
